Update README.md to reflect Java 25 features and enhance framework support details